# autodevice-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  publish-npm.yml
docs/: architecture.md  device-setup.md  npm-installation.md  real-device-regression.md  report-format.md  troubleshooting.md
lib/: archive.js  bootstrap.js  cli.js  download.js  launch.js  platform.js  python.js  runtime-manifest.js
mobile_auto_mcp/: __init__.py  server.py
mobile_auto_mcp/cases/: __init__.py  parser.py
mobile_auto_mcp/execution/: __init__.py  clicker.py  command_runner.py  contracts.py  devices.py  events.py  failures.py  preflight.py  probe.py  readiness.py  runner.py  wda_guardian.py
mobile_auto_mcp/mcp_tools/: __init__.py  registry.py
mobile_auto_mcp/platform/: __init__.py  capabilities.py  file_lock.py  network.py  processes.py
mobile_auto_mcp/proxy/: __init__.py  (+11 more)
runtime/: constraints.txt  python-build-standalone.json
scripts/: postinstall.js
tests/: test_android_wifi_proxy_navigation.py  test_device_network_info.py  test_device_proxy_ssid_guard.py  test_evidence_privacy.py  test_execution_safety.py  test_knowledge_concurrency.py  test_mcp_public_contract.py  test_platform_capabilities.py  test_platform_file_lock.py  test_platform_network.py  test_platform_processes.py  test_private_files.py  test_proxy_host_selection.py  test_proxy_recovery.py  test_review_lifecycle.py  test_rule_request_contracts.py  test_wda_readiness_gate.py
(+20 files in other folders)
