[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "mobile-auto-mcp"
version = "0.2.0"
description = "MCP server for auditable abnormal API-response testing on Android, iOS, and HarmonyOS devices."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["mcp", "mobile-testing", "android", "ios", "harmonyos", "mitmproxy", "qa-automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "mcp>=1.23,<2",
  "mitmproxy>=12,<13",
  "Pillow>=10,<13",
  "uiautomator2>=3,<4",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7,<2",
  "build>=1.2,<2",
  "pytest>=8,<10",
  "ruff>=0.9,<1",
]

[project.scripts]
mobile-auto-mcp = "mobile_auto_mcp.server:main"

[tool.setuptools.packages.find]
include = ["mobile_auto_mcp*"]

[tool.pytest.ini_options]
markers = [
  "real_device: opt-in tests that mutate authorized physical test devices and require explicit environment configuration",
]
